<!--
 Copyright (c) 2015 Ngewi Fet <ngewif@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:dialogTitle="@string/title_choose_currency"
        android:entries="@array/key_currency_codes"
        android:entryValues="@array/key_currency_codes"
        android:icon="@drawable/ic_money"
        android:key="@string/key_default_currency"
        android:summary="@string/summary_default_currency"
        android:title="@string/title_default_currency" />
    <Preference
        android:key="@string/key_create_default_accounts"
        android:summary="@string/summary_create_default_accounts"
        android:title="@string/title_create_default_accounts" />
    <Preference
        android:icon="@drawable/ic_folder_open"
        android:key="@string/key_import_accounts"
        android:summary="@string/summary_import_accounts"
        android:title="@string/title_import_accounts" />
    <Preference
        android:icon="@drawable/ic_backup"
        android:key="@string/key_export_accounts_csv"
        android:summary="@string/summary_export_accounts_csv"
        android:title="@string/title_export_accounts_csv" />
    <Preference
        android:icon="@drawable/ic_delete"
        android:key="@string/key_delete_all_accounts"
        android:summary="@string/summary_delete_all_accounts"
        android:title="@string/title_delete_all_accounts" />
</PreferenceScreen>
