...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/report_account_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />
            </LinearLayout>

            <FrameLayout
...
