...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/btn_pie_chart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/report_orange"
                android:drawableStart="@drawable/ic_pie_chart"
                android:text="@string/title_pie_chart" />
...
